--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 #carousel {
-    height: 500px;
-    width: 800px;
+    height: 600px;
+    width: 1000px;
     margin: 50px auto;
+    position: relative;
+  }
+
+  .gallery {
     position: relative;
   }
   
@@ -15,6 +19,11 @@
   
   .gallery img.active {
     display: block;
+  }
+  .caption {
+    position: absolute;
+    bottom: 0;
+    left: 15px;
   }
   
   /* BUTTONS */
