--- a/style.css
+++ b/style.css
@@ -3,46 +3,56 @@
     width: 1000px;
     margin: 50px auto;
     position: relative;
-  }
+}
 
-  .gallery {
+.gallery {
     position: relative;
-  }
-  
-  .gallery img {
+}
+
+.gallery img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
     display: none;
+}
+.gallery .caption {
+    display: none;
   }
-  
-  .gallery img.active {
+
+.gallery img.active .gallery .caption.active {
     display: block;
-  }
-  .caption {
+}
+
+.caption {
     position: absolute;
     bottom: 0;
     left: 15px;
-  }
-  
-  /* BUTTONS */
-  
-  #carousel .fa-solid {
+}
+
+.caption h3,
+.caption p {
+    text-shadow: 0 0 5px black;
+}
+
+
+/* BUTTONS */
+
+#carousel .fa-solid {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-  }
-  
-  #carousel .fa-solid:hover {
+}
+
+#carousel .fa-solid:hover {
     color: dodgerblue;
-  }
-  
-  #prev {
+}
+
+#prev {
     right: 103%;
-  }
-  
-  #next {
+}
+
+#next {
     left: 103%;
-  }
+}
